--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "private": true,
     "version": "4.2.0",
     "type": "module",
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "scripts": {
         "start": "vite",
         "dev": "vite",
