--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.4.2",
         "@react-three/xr": "^6.6.28",
+        "lucide-react": "^0.562.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "three": "^0.182.0"
