feat: Add build automation from ElderScape integration
- Fix modelRouter.ts syntax error (switch statement closing brace)
- Add buildScripts directory with ES module-compatible scripts
- Add buildWorker.js for Cloudflare Worker generation
- Add copyAssets.js for asset deployment automation
- Enhance package.json with 7 new build/deploy commands
- Phase 1 integration complete, all tests passing

--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
         "start": "vite",
         "dev": "vite",
         "build": "vite build",
+        "build:worker": "node buildScripts/buildWorker.js",
+        "build:assets": "node buildScripts/copyAssets.js",
+        "build:all": "npm run build && npm run build:worker && npm run build:assets",
         "preview": "vite preview",
-        "lint:css": "stylelint \"./index.css\" \"./src/**/*.{css,tsx}\""
+        "lint:css": "stylelint \"./index.css\" \"./src/**/*.{css,tsx}\"",
+        "deploy": "npm run build:all && wrangler deploy",
+        "deploy:staging": "npm run build:all && wrangler deploy --env staging",
+        "deploy:production": "npm run build:all && wrangler deploy --env production"
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
