--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-    environment:
-      name: production
+    environment: 'production'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
