--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-    environment:
-      name: production
-      url: https://workers.cloudflare.com
+    # environment:
+    #   name: production
+    #   url: https://workers.cloudflare.com
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
