--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lucide-react": "^0.562.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
+        "reactflow": "^11.11.4",
         "three": "^0.182.0"
     },
     "devDependencies": {
