--- a/wrangler.toml
+++ b/wrangler.toml
@@ -26,6 +26,10 @@ bucket_name = "antigravity-media"
 binding = "ASSETS_BUCKET"
 bucket_name = "antigravity-assets"
 
+# AI Binding for Workers AI
+[ai]
+binding = "AI"
+
 # Scheduled tasks
 [triggers]
 crons = ["0 */6 * * *", "0 0 * * *"]
@@ -41,6 +45,7 @@ bucket = "./dist"
 # Environment variables (non-sensitive)
 [vars]
 ENVIRONMENT = "production"
+AI_GATEWAY_ID = "antigravity-gateway"
 
 # Staging environment
 [env.staging]
