--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "reactflow": "^11.11.4",
-        "three": "^0.182.0"
+        "three": "^0.182.0",
+        "three-stdlib": "^2.36.1"
     },
     "devDependencies": {
         "@types/node": "^22.14.0",
