--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build:assets": "node buildScripts/copyAssets.js",
         "build:all": "npm run build && npm run build:worker && npm run build:assets",
         "preview": "vite preview",
+        "test": "vitest run",
         "lint:css": "stylelint \"./index.css\" \"./src/**/*.{css,tsx}\"",
         "deploy": "npm run build:all && wrangler deploy",
         "deploy:staging": "npm run build:all && wrangler deploy --env staging",
@@ -22,6 +23,7 @@
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
         "@instantdb/react": "^0.22.96",
+        "@monaco-editor/react": "^4.7.0",
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.4.2",
         "@react-three/xr": "^6.6.28",
@@ -33,17 +35,21 @@
         "three-stdlib": "^2.36.1"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.1",
         "@types/node": "^22.14.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
         "@types/three": "^0.182.0",
         "@vitejs/plugin-react": "^5.0.0",
         "autoprefixer": "^10.4.23",
+        "jsdom": "^27.4.0",
         "postcss": "^8.5.6",
         "stylelint": "^16.26.1",
         "stylelint-config-standard": "^39.0.1",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.8.2",
-        "vite": "^6.2.0"
+        "vite": "^6.2.0",
+        "vitest": "^4.0.16"
     }
 }
