--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-    # environment:
-    #   name: production
-    #   url: https://workers.cloudflare.com
+    environment:
+      name: production
+      url: https://antigravity-engine.pages.dev
+
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -79,9 +80,10 @@ jobs:
     - name: Build All
       run: npm run build:all
 
-    - name: Deploy to Cloudflare Workers
+    - name: Deploy to Cloudflare
       uses: cloudflare/wrangler-action@v3
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        command: deploy --env production
+        command: pages deploy dist --project-name=antigravity-engine
+
