--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@monaco-editor/react": "^4.7.0",
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.4.2",
+        "@react-three/postprocessing": "^3.0.4",
         "@react-three/xr": "^6.6.28",
         "@types/json-schema": "^7.0.15",
         "autobind-decorator": "^2.4.0",
@@ -40,6 +41,7 @@
         "json-schema": "^0.4.0",
         "json-stringify-pretty-compact": "^4.0.0",
         "lucide-react": "^0.562.0",
+        "postprocessing": "^6.38.2",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "reactflow": "^11.11.4",
