--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "scripts": {
         "start": "vite",
         "dev": "vite",
-        "build": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
+        "build:vite": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
+        "build": "npm run build:vite && npm run build:worker && npm run build:assets",
         "build:worker": "node buildScripts/buildWorker.js",
         "build:assets": "node buildScripts/copyAssets.js",
-        "build:all": "npm run build && npm run build:worker && npm run build:assets",
+        "build:all": "npm run build",
         "preview": "vite preview",
         "test": "vitest run",
         "lint:css": "stylelint \"./index.css\" \"./src/**/*.{css,tsx}\"",
